# ubinutils

./: .gitignore  README.md  elf.c  elf.h  meson.build  nm.c
include/ubu/: aof.h  ar.h  arch.h  chunkfile.h  pe.h  utils.h
lib/: aof.c  aof.h  ar.c  ar.h  chunkfile.c  chunkfile.h  elf.c  elf.h  memfile.c  memfile.h  pe.c  pe.h  utils.h
src/: aof.c  ar.c  arch.c  chunkfile.c  elf.c  memfile.c  pe.c  utils.c
subprojects/: capstone.wrap
tools/: ar.c  flatdis.c  nm.c  objinfo.c  size.c
tools/link/: syms.c
utils/: ar.c  nm.c
